--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <body class="centered auth-bg">
 
   <div class="auth-box">
+    <!-- Logos -->
     <div class="logo-row">
       <div class="logo-wrap">
         <img src="assets/images/psa.png" alt="PSA Logo">
@@ -18,15 +19,16 @@
       </div>
     </div>
 
-    <h1 class="title" style="font-size:12px;">Philippine Statistics Authority</h1>
+    <h1 class="title" style="font-size: 12px;">Philippine Statistics Authority</h1>
     <h1 class="title">National ID System</h1>
-    <p class="subtitle">Secure Login</p>
+    <p class="subtitle">Secure Login • Powered by Google Sheets</p>
 
     <div class="tabs">
       <button id="loginTab" class="tab active" type="button">Login</button>
       <button id="registerTab" class="tab" type="button">Register</button>
     </div>
 
+    <!-- LOGIN FORM -->
     <form id="loginForm" class="form">
       <label>Email</label>
       <input type="email" id="loginEmail" placeholder="name@example.gov.ph" required>
@@ -34,16 +36,26 @@
       <label>Password</label>
       <input type="password" id="loginPassword" placeholder="Enter your password" required>
 
-      <button type="submit" class="btn-primary">Login</button>
+      <button type="submit" class="btn-primary" id="loginBtn">
+        <span class="btn-spinner" aria-hidden="true"></span>
+        <span class="btn-text">Login</span>
+      </button>
+
       <p id="loginMsg" class="msg hidden"></p>
     </form>
 
+    <!-- REGISTER FORM -->
     <form id="registerForm" class="form" style="display:none;">
-      <label>First Name</label>
-      <input type="text" id="regFirstName" required>
-
-      <label>Middle Name</label>
-      <input type="text" id="regMiddleName" placeholder="Optional">
+      <div class="form-row">
+        <div>
+          <label>First Name</label>
+          <input type="text" id="regFirstName" required>
+        </div>
+        <div>
+          <label>Middle Name</label>
+          <input type="text" id="regMiddleName" placeholder="Optional">
+        </div>
+      </div>
 
       <label>Last Name</label>
       <input type="text" id="regLastName" required>
@@ -52,28 +64,16 @@
       <input type="email" id="regEmail" required>
 
       <label for="regViber">Viber Number</label>
-      <input
-  id="regViber"
-  type="text"
-  inputmode="numeric"
-  placeholder="09XXXXXXXXX"
-  required
-/>
+      <input id="regViber" type="text" inputmode="numeric" placeholder="09XXXXXXXXX" required />
 
       <label>Position</label>
       <select id="regPosition" required>
         <option value="">-- Select Position --</option>
-        <option value="Encoder">Encoder</option>
-        <option value="Clerk">Clerk</option>
-        <option value="Supervisor">Supervisor</option>
       </select>
 
       <label>Province</label>
       <select id="regProvince" required>
         <option value="">-- Select Province --</option>
-        <option value="Cebu">Cebu</option>
-        <option value="Bohol">Bohol</option>
-        <option value="Negros Oriental">Negros Oriental</option>
       </select>
 
       <label>Password</label>
@@ -84,12 +84,17 @@
 
       <label>Role</label>
       <select id="regRole" required>
+        <option value="">-- Select Role --</option>
         <option value="user">User</option>
       </select>
 
       <div id="adminNote" class="note bad">Admin role requires authorization.</div>
 
-      <button type="submit" class="btn-primary">Create Account</button>
+      <button type="submit" class="btn-primary" id="registerBtn">
+        <span class="btn-spinner" aria-hidden="true"></span>
+        <span class="btn-text">Create Account</span>
+      </button>
+
       <p id="regMsg" class="msg hidden"></p>
     </form>
 
@@ -98,8 +103,6 @@
     </div>
   </div>
 
-  <script src="assets/js/auth.js" defer></script>
+  <script src="assets/js/auth.js?v=3" defer></script>
 </body>
 </html>
-
-
